[package]
name = "gundam"
version = "0.1.0"
authors = ["mario incandenza"]

[[bin]]
name = "gundam"
path = "src/main.rs"

[[bin]]
name = "gundam_kmer"
path = "src/choose.rs"


[dependencies]
pssm = { git = "https://github.com/ortho-the-d-stice/rust-pssm" }
bio = "*"
rand = "*"
ndarray = "0.10"
jobsteal = "*"
log = "*"
env_logger = "*"
darwin-rs = "*"
fishers_exact = "*"
